# super-gametable

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  flake.nix  justfile  rust-toolchain.toml  shell.nix
.github/workflows/: publish.yml
crates/super-gametable-enrollment/: Cargo.toml
crates/super-gametable-enrollment/src/: lib.rs
crates/super-gametable-enrollment/src/routes/: action.rs  incoming.rs  mod.rs
crates/super-gametable-enrollment/src/table/: mod.rs
src/: cli.rs  config.rs  controllers.rs  game.rs  game_pool.rs  main.rs  queue.rs
src/http/: mod.rs
