[package]
name = "super-gametable-enrollment"
version = "0.1.0"
edition = "2024"

[dependencies]
libmahjong-rs = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
headers = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
tower-http = { workspace = true }
async-trait = { workspace = true }
